# partkeepr-ng

./: .gitignore  .spectraq-release.conf  Cargo.toml  README.md
backend/: .env.example  Cargo.toml  README.md
backend/src/: error.rs  main.rs  startup.rs
backend/src/handlers/: attachments.rs  auth.rs  categories.rs  clamd.rs  digikey.rs  footprints.rs  grid_presets.rs  jlcparts.rs  lookup.rs  lookups.rs  mod.rs  mouser.rs  nested_set.rs  parametric.rs  part_locations.rs  parts.rs  printing.rs  projects.rs  serde_helpers.rs  stock.rs  storage.rs  storage_locations.rs  trustedparts.rs  version.rs
backend/src/models/: batch_job.rs  batch_job_query_field.rs  batch_job_update_field.rs  cached_image.rs  cron_logger.rs  distributor.rs  footprint.rs  footprint_attachment.rs  footprint_category.rs  footprint_image.rs  grid_preset.rs  import_preset.rs  manufacturer.rs  manufacturer_ic_logo.rs  meta_part_parameter_criteria.rs  mod.rs  part.rs  part_attachment.rs  part_category.rs  part_distributor.rs  part_manufacturer.rs  part_measurement_unit.rs  part_parameter.rs  part_storage_location.rs  project.rs  project_attachment.rs  project_part.rs  project_run.rs  project_run_part.rs  report.rs  report_part.rs  report_project.rs  si_prefix.rs  statistic_snapshot.rs  statistic_snapshot_unit.rs  stock_entry.rs  storage_location.rs  storage_location_category.rs  storage_location_image.rs  system_notice.rs  (+9 more)
docs/: issue-analysis.json  issue-analysis.md  manual-smoke-tests.md  migrating-from-partkeepr-1.4.0.md  schema.json  schema.md
docs/live-schema/: partkeepr-migrations.txt  partkeepr-schema.sql  partkeepr-tables.txt
docs/man/: partkeepr-ng.8  partkeepr-ng.conf.5
docs/upstream-issues/: README.md  pr-review-comments.json  pulls.json
frontend/: Cargo.toml  Trunk.toml  app.js  index.html  style.css
frontend/src/: api.rs  main.rs  types.rs
frontend/src/components/: attachments_section.rs  auth_views.rs  bom_line_dialog.rs  category_edit_dialog.rs  category_move_dialog.rs  category_tree.rs  delete_dialog.rs  footprint_cat_edit_dialog.rs  footprint_leaf_edit_dialog.rs  footprint_move_dialog.rs  footprint_tree.rs  grid_columns.rs  left_pane_tabs.rs  lookup_edit_dialog.rs  lookup_type_list.rs  lookups_panel.rs  meta_help.rs  mod.rs  param_help.rs  parametric_filter.rs  part_detail.rs  part_editor.rs  parts_grid.rs  project_edit_dialog.rs  project_panel.rs  projects_list.rs  run_delete_dialog.rs  run_project_dialog.rs  stock_dialog.rs  storage_cat_edit_dialog.rs  storage_loc_edit_dialog.rs  storage_move_dialog.rs  storage_tree.rs
frontend/views/: admin.js  api.js  dialogs.js  part-editor.js  parts-grid.js  scan.js  trees.js
scripts/: analyze-issues.py  dump-upstream-issues.sh  extract-schema.py  generate-rust-models.py  import-legacy-files.sh  jlcparts-sync.sh  make-dist.sh  migrate-from-upstream.sh  probe-mouser-orderhistory.sh  setup-jlcparts-paths.sh
scripts/jlcparts-build/: README.md
scripts/migrations/: 0001-attribution-backfill.sql  0002-multi-location-parts.sql  0005-partunit-cleanup.sql  container-rows-backfill.sql  stock-entry-container-tracking.sql  stock-entry-order-tracking.sql
