[workspace]
members = ["backend"]
resolver = "2"

# Workspace-level package metadata. The driving reason for declaring a
# version here is the SpectraQ overlay release driver — it validates
# the tagged version against `grep '^version' Cargo.toml`, which fails
# silently under `set -euo pipefail` if the file has no `version =`
# line. Backend/Cargo.toml inherits via `version.workspace = true`,
# keeping the two in lockstep.
[workspace.package]
version = "0.1.0"
