[package]
name = "partkeepr-api"
version = "0.1.0"
edition = "2021"
publish = false
# `cargo run` (no --bin) starts the API server. The reset-password
# binary is for one-off CLI use via `cargo run --bin reset-password`.
default-run = "partkeepr-api"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
bytes = "1"
# Streaming body support for the URL-fetch path (cap by reading chunks).
futures-util = { version = "0.3", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
dotenvy = "0.15"
# Slice 7: image thumbnail generation. Default features pull in heavy
# format support (TIFF, PNM, ICO, etc.) we don't need; restrict to the
# common formats we actually expect to handle.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
mime = "0.3"
mime_guess = "2"
# Slice 7 follow-up: server-side URL fetching for "Attach by URL".
# rustls-tls keeps the dep tree native-Rust (no OpenSSL), stream
# enables streaming response bodies (we cap upload size while reading).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
    "rust_decimal",
    "macros",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "io-util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
# Slice 10: auth — FOSUserBundle password verification (sha512 + 5000 iter
# + base64) and HMAC-signed session-cookie payloads.
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
subtle = "2.6"
tower = "0.5"
# axum-extra gets us cookie-jar extractors so handlers can read/write
# cookies without manually stitching headers.
axum-extra = { version = "0.9", features = ["cookie"] }
# Used for cookie max-age durations (the cookie crate's API takes
# `time::Duration`, not `std::time::Duration` or `chrono::Duration`).
time = "0.3"
