[package]
name = "partkeepr-frontend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http"] }
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlInputElement", "HtmlTextAreaElement",
    "File", "FileList", "FormData", "Blob",
] }
